@@ -3,6 +3,7 @@ Description
     * First version of the App.
 Changes
     * Version 1.0 Build 01 (2017/03/01)
+        * Added some very basic support for CloudKit. (2017/03/06)
         * Added support for a filter menu item. (2017/03/06)
         * Added support to change the category of a task, but only when is EDITABLE. Also changed the layout of custom views. Sensible change! (2017/03/03)
         * Added support to notify the user that all tasks added while FIRST_DAY are going for today. (2017/03/03)
